# miniChemistry2

./: .gitignore  MANIFEST.in  README.md  UPDATES.md  pyproject.toml
miniChemistry/: MiniChemistryException.py  cli.py
miniChemistry/Computations/: ReactionCalculator(OLD).py  ReactionCalculator.py  SSDatum.py  __init__.py
miniChemistry/Computations/CalculatorFiles/: Assumptions  formulas.txt  units_and_names.txt
miniChemistry/Computations/ComputationExceptions/: DatumException.py  IterativeCalculatorException.py  QuantityCalculatorException.py  ReactionCalculatorException.py
miniChemistry/Computations/Problems/: LR_Problem.py  ProblemParser.py  ProblemSolver.py  S_Problem.py
miniChemistry/Core/: ElementaryParticle.py
miniChemistry/Core/CoreExceptions/: CompatibilityTableExceptions.py  MechanismExceptions.py  ReactionExceptions.py  SubstanceExceptions.py  ToolExceptions.py  ptableExceptions.py  stableExceptions.py
miniChemistry/Core/Database/: AcidCompatibilityTable  AcidsTable.py  BasesTable.py  HalfReactionDatabase.csv  HalfReactionDatabase.py  MetalActivitySeries  MetalActivitySeries.py  ModifyHalfReactionDatabase.py  ModifySolubilityTable.py  SolubilityTable.csv  SolubilityTable.xlsx  ptable.py  stable.py
miniChemistry/Core/Reactions/: AbstractReaction.py  HalfReaction.py  IonGroupReaction.py  MathReaction.py  MolecularReaction.py  ReactionModifiers.py  __init__.py
miniChemistry/Core/Substances/: Ion.py  IonGroup.py  (+7 more)
miniChemistry/EXAMPLES/: Create_exercises.py  __init__.py
miniChemistry/Utilities/: Checks.py  File.py  UtilityExceptions.py
(+21 files in other folders)
